# funes

./: .gitignore  README.md  llms.txt  pyproject.toml
.github/workflows/: ci-cd.yml
bs/: lint
src/funes/: __init__.py  funes_types.py  maker.py  memory.py  policy.py  protocol.py  result.py  sqlite.py
tests/: conftest.py  test_lru.py  test_maker.py  test_store.py
