[project]
name = "funes"
version = "0.1.0"
description = "Generator-based memoisation over a callable Store"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "vulture>=2.11",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "BLE", "SIM", "RUF", "PLR", "PLC", "C"]

[tool.ruff.lint.pylint]
max-args = 4
max-statements = 14

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "B901"]
"src/funes/funes_types.py" = ["PLR6301"]

[tool.hatch.build.targets.wheel]
packages = ["src/funes"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
